internal/netpol/testdata/manifests/allowed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-allowed
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: netpol-allowed
  labels:
    app: client
spec:
  containers:
    - name: client
      image: registry.k8s.io/pause:3.10
---
apiVersion: v1
kind: Pod
metadata:
  name: api
  namespace: netpol-allowed
  labels:
    app: api
spec:
  containers:
    - name: api
      image: registry.k8s.io/pause:3.10
      ports:
        - name: https
          containerPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-api
  namespace: netpol-allowed
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
      ports:
        - protocol: TCP
          port: 8443
