internal/netpol/testdata/manifests/cidr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netpol-cidr
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: netpol-cidr
  labels:
    app: client
spec:
  containers:
    - name: client
      image: registry.k8s.io/pause:3.10
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-private-except-database
  namespace: netpol-cidr
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
            except:
              - 10.20.0.0/16
      ports:
        - protocol: TCP
          port: 443
